crates/uitest/fixtures/ty_check/effect_resolution.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/effect_resolution.fe
---
error[2-0010]: no method named `caller` found for foo `foo`
  ┌─ effect_resolution.fe:5:21
  │
5 │         owner = foo.caller()
  │                     ^^^^^^ method not found in `foo`

error[8-0012]: undefined variable
   ┌─ effect_resolution.fe:39:5
   │
39 │     foo.caller() == owner
   │     ^^^ undefined variable `foo`

error[8-0051]: unresolved effect
  ┌─ effect_resolution.fe:1:34
  │
1 │ contract Mine uses (foo: Foo, x: X, y) {
  │                                  ^ cannot resolve `X` as a type or trait
  │
  = consider defining a type or trait named `X`
  = or bind the effect value with `uses (name: Type)`

error[8-0051]: unresolved effect
  ┌─ effect_resolution.fe:1:37
  │
1 │ contract Mine uses (foo: Foo, x: X, y) {
  │                                     ^ cannot resolve `y` as a type or trait
  │
  = consider defining a type or trait named `y`
  = or bind the effect value with `uses (name: Type)`

error[8-0051]: unresolved effect
   ┌─ effect_resolution.fe:37:9
   │
37 │   uses (foo, owner: Address)
   │         ^^^ cannot resolve `foo` as a type or trait
   │
   = consider defining a type or trait named `foo`
   = or bind the effect value with `uses (name: Type)`

error[8-0053]: unsupported contract effect
  ┌─ effect_resolution.fe:1:26
  │
1 │ contract Mine uses (foo: Foo, x: X, y) {
  │                          ^^^ contract root effect `Evm` does not implement `Foo`
  │
  = contract-scoped trait effects must be implemented by the target `RootEffect` (`Evm`)
